--- a/.gitignore
+++ b/.gitignore
@@ -368,9 +368,8 @@ temp/lastName.txt
 temp/lastLink.txt
 temp/Mdata.json
 temp/Mdata.txt
-save/twitchfilter.py
-save/myip.py
 gBot/gdata2023.csv
 gBot/graph.py
 modules/gPriceChecker.py
-save/controlPanel.py
+save/
+test/
